--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,11 @@
 *.suo
 *.user
 *.userosscache
+*.sln
 *.sln.docstates
+*.vcxproj
+*.filters
+*.user
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
