--- a/РГР АиСД/РГР АиСД.vcxproj
+++ b/РГР АиСД/РГР АиСД.vcxproj
@@ -142,14 +142,14 @@
     <ClCompile Include="Comparators.cpp" />
     <ClCompile Include="Dictionary.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="SetString.cpp" />
+    <ClCompile Include="Set.cpp" />
     <ClCompile Include="Transformators.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Comparators.hpp" />
     <ClInclude Include="Dictionary.hpp" />
     <ClInclude Include="RBT.hpp" />
-    <ClInclude Include="SetString.hpp" />
+    <ClInclude Include="Set.hpp" />
     <ClInclude Include="Transformators.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
